Most Important API Changes
--------------------------

Those are mentioned here as are not backward compatible.
I want the api to be stable and consistent in the next release and later,
so I do all the big changes now (I would have to do them at some time anyway).

2005-10-14

	Usage of non-unicode strings in PyXMPP API is deprecated. No
	no implicit conversion is made where utf-8 string would previously be
	accepted (e.g. JID constructor). Sometimes deprecation warning will be
	raised when string is used instead of unicode.


2005-03-20

	"common_doc", "common_root", and "common_ns" can no longer be imported
	from the "stanza" module. They were moved to the "xmlextra" module.

2005-01-20

	Minor change: now "disco_info" and "disco_items" attributes
	of pyxmpp.jabber.client and pyxmpp.jabberd.component are initialized
	in the constructors of those classes. Those __init__() methods now
	accept "disco_name", "disco_category" and "disco_type" arguments
	to set up the entity identity. Also register_feature() and
	unregister_feature() methods were added for managing the feature
	list in .disco_info.

2005-01-09

	Continuation of the big API unification.

	All attribute and parameter names "node", relating to XML node have
	been renamed to "xmlnode". The most important change is `Stanza.node` renamed
	to `Stanza.xmlnode`.

	Roster.items(), Roster.groups(), Roster.items_by_name(), Roster.items_by_group(),
	Roser.items_by_jid() renamed to: Roster.get_items(), Roster.get_groups(),
	Roster.get_items_by_name(), Roster.get_items_by_group(), Roster.get_item_by_jid()

	Keys of Roster.items_dict are now JIDs, not unicode.

	More .as_xml() methods unified. To reuse most of the code needed two
	new virtual classes were added: pyxmpp.objects.StanzaPayloadObject
	and pyxmpp.objects.StanzaPayloadWrapperObject. Objects providing .as_xml()
	methods may be used directly as argument to Stanza.set_content() and
	Stanza.add_content() methods.

2005-01-06

	Big API unification started.
	